--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "byteflix",
+  "name": "capiflix",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
