--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.4",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
